--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=MyLowPolyGame
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/Realm_Of_Elyria.Realm_Of_Elyria
-GameDefaultMap=/Game/ThirdPerson/Maps/Realm_Of_Elyria.Realm_Of_Elyria
+EditorStartupMap=/Game/ThirdPerson/Maps/Map_Of_Elyria.Map_Of_Elyria
+GameDefaultMap=/Game/ThirdPerson/Maps/Map_Of_Elyria.Map_Of_Elyria
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
@@ -49,7 +49,7 @@ r.Lumen.HardwareRayTracing=False
 r.Lumen.HardwareRayTracing.LightingMode=0
 r.Lumen.TranslucencyReflections.FrontLayer.EnableForProject=False
 r.Lumen.TraceMeshSDFs=0
-r.Shadow.Virtual.Enable=0
+r.Shadow.Virtual.Enable=1
 r.RayTracing=False
 r.RayTracing.Shadows=False
 r.RayTracing.UseTextureLod=False
