--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -28,7 +28,7 @@ r.PrecomputedVisibilityWarning=False
 r.TextureStreaming=True
 Compat.UseDXT5NormalMaps=False
 r.VirtualTextures=False
-r.VT.EnableAutoImport=True
+r.VT.EnableAutoImport=False
 r.VirtualTexturedLightmaps=False
 r.VT.AnisotropicFiltering=False
 bEnableVirtualTextureOpacityMask=False
